fix: add text overflow css settings for the button text (#83)

--- a/src/style.less
+++ b/src/style.less
@@ -410,3 +410,9 @@
 		}
 	} 
 }
+.lui-button__text {
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
